Homeメインビジュアル作成

--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.2",
     "@react-spring/core": "^9.7.5",
     "@react-spring/shared": "^9.7.5",
     "@react-spring/web": "^9.7.5",
-    "framer-motion": "^12.6.5",
+    "framer-motion": "^11.18.2",
     "gsap": "^3.12.7",
-    "motion": "^12.6.5",
     "next": "15.3.0",
     "ogl": "^1.0.11",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
